tests/ui/cilk/fib_block_recurse_no_sync.stderr
error[E0381]: used binding `x` is possibly-uninitialized
  --> $DIR/fib_block_recurse_no_sync.rs:8:9
   |
LL |     let x = cilk_spawn { fib(n - 1) };
   |         ^
   |         |
   |         `x` used here but it is possibly-uninitialized
   |         binding declared here but left uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
